--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -1,5 +1,5 @@
 {{ $email := promptString "email" -}}
-{{ $email := promptString "name" -}}
+{{ $name := promptString "name" -}}
 [git]
   autoCommit = true
   autoPush = true
