--- a/private_dot_ssh/config.tmpl
+++ b/private_dot_ssh/config.tmpl
@@ -2,7 +2,7 @@ Include ~/.orbstack/ssh/config
 
 Host github.com
   AddKeysToAgent yes
-{{ if eq $location "work" }} 
+{{ if eq .location "work" }} 
   IdentityFile ~/.ssh/id_ed25519_shine
 {{ else }}
   IdentityFile ~/.ssh/id_ed25519_personal
