--- a/run_onchange_install-packages.sh.tmpl
+++ b/run_onchange_install-packages.sh.tmpl
@@ -29,6 +29,9 @@ brew install fzf
 brew install git
 brew install neovim
 brew install --cask wezterm
-op read "op://Private/Sdickinson Server Private Key/private key" > ~/.ssh/id_ed25519
-op read "op://Private/Sdickinson Server Private Key/public key" > ~/.ssh/id_ed25519.pub
 {{ end -}}
+op read "op://Private/Sdickinson Server Private Key/private key" > ~/.ssh/id_ed25519_personal
+op read "op://Private/Sdickinson Server Private Key/public key" > ~/.ssh/id_ed25519_personal.pub
+op read "op://Private/Shine Github Key/private key" > ~/.ssh/id_ed25519_shine
+op read "op://Private/Shine Github Key/public key" > ~/.ssh/id_ed25519_shine.pub
+
