--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -108,7 +108,7 @@ source $ZSH/oh-my-zsh.sh
 # alias ohmyzsh="mate ~/.oh-my-zsh"
 # export JAVA_8_HOME=$(/usr/libexec/java_home -v1.8)
 # export JAVA_9_HOME=$(/usr/libexec/java_home -v1.9)
-
+alias vim=nvim
 export PATH=/usr/local/opt/vim/bin:/usr/local/opt/ruby/bin:/usr/local/opt/git/bin/:/usr/local/opt/gnu-tar/libexec/gnubin:$PATH:~/bin::/Applications/WezTerm.app/Contents/MacOS
 
 export LDFLAGS="$LDFLAGS -L/usr/local/opt/ruby/lib"
