Update .zshrc.local Update install-packages.sh

--- a/run_onchange_install-packages.sh.tmpl
+++ b/run_onchange_install-packages.sh.tmpl
@@ -22,6 +22,7 @@ sudo apt install lsd
 sudo apt install jq
 sudo apt install fzf
 sudo apt install git
+sudo apt install thefuck
 {{ else if eq .chezmoi.os "darwin" -}}
 #!/bin/sh
 brew install 1password-cli
@@ -31,6 +32,7 @@ brew install fzf
 brew install git
 brew install neovim
 brew install --cask wezterm
+brew install thefuck
 {{ end -}}
 op read "op://Private/Sdickinson Server Private Key/private key" > ~/.ssh/id_ed25519_personal
 op read "op://Private/Sdickinson Server Private Key/public key" > ~/.ssh/id_ed25519_personal.pub
