--- a/dot_fzf.zsh.tmpl
+++ b/dot_fzf.zsh.tmpl
@@ -13,5 +13,6 @@ source "/opt/homebrew/opt/fzf/shell/completion.zsh"
 # ------------
 source "/opt/homebrew/opt/fzf/shell/key-bindings.zsh"
 {{ else }}
-
+source /usr/share/doc/fzf/examples/completion.zsh
+source /usr/share/doc/fzf/examples/key-bindings.zsh
 {{ end }}
