Update .fzf.zsh Update install-packages.sh

--- a/dot_fzf.zsh.tmpl
+++ b/dot_fzf.zsh.tmpl
@@ -6,7 +6,7 @@ fi
 
 # Auto-completion
 # ---------------
-{{ if eq .chezmoi.os "darwin }}
+{{ if eq .chezmoi.os "darwin" }}
 source "/opt/homebrew/opt/fzf/shell/completion.zsh"
 
 # Key bindings
