--- a/run_onchange_install-packages.sh.tmpl
+++ b/run_onchange_install-packages.sh.tmpl
@@ -13,8 +13,7 @@ curl -sS https://downloads.1password.com/linux/keys/1password.asc | \
   curl -sS https://downloads.1password.com/linux/keys/1password.asc | \
   sudo gpg --dearmor --output /usr/share/debsig/keyrings/AC2D62742012EA22/debsig.gpg && \
   sudo apt update && sudo apt install 1password-cli
-op account add --address jazzxp.1password.com --email $EMAIL
-$ eval $(op signin --account jazzxp)
+op account add --address my.1password.com --email sdickinson@gmail.com --signin
 
 sudo apt install wezterm
 sudo apt install neovim
