--- a/dot_config/wezterm/wezterm.lua.tmpl
+++ b/dot_config/wezterm/wezterm.lua.tmpl
@@ -21,7 +21,7 @@ config.set_environment_variables = {
 }
 config.color_scheme = 'Solarized Dark Higher Contrast'
 config.leader = { key = "b", mods = "CTRL", timeout_milliseconds = 2000 }
-{{ if eq .chezmoi.ok "darwin" }}
+{{ if eq .chezmoi.os "darwin" }}
 config.window_background_opacity = 0.85
 config.macos_window_background_blur = 30
 {{ else }}
