--- a/dot_config/wezterm/wezterm.lua.tmpl
+++ b/dot_config/wezterm/wezterm.lua.tmpl
@@ -18,9 +18,9 @@ end
 config.set_environment_variables = {
   PATH = '/opt/homebrew/bin:' .. os.getenv('PATH')
 }
--- config.color_scheme = 'Solarized Dark Higher Contrast'
+config.color_scheme = 'Solarized Dark Higher Contrast'
 -- config.color_scheme = 'Atelier Dune (base16)'
-config.color_scheme = 'SolarizedDark (Gogh)'
+-- config.color_scheme = 'SolarizedDark (Gogh)'
 config.leader = { key = "b", mods = "CTRL", timeout_milliseconds = 2000 }
 {{ if eq .chezmoi.os "darwin" }}
 config.window_background_opacity = 0.85
