--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -109,7 +109,7 @@ source $ZSH/oh-my-zsh.sh
 # export JAVA_8_HOME=$(/usr/libexec/java_home -v1.8)
 # export JAVA_9_HOME=$(/usr/libexec/java_home -v1.9)
 alias vim=nvim
-alias cat=bat --theme=ansi
+alias cat="bat --theme=ansi"
 export PATH=/usr/local/opt/vim/bin:/usr/local/opt/ruby/bin:/usr/local/opt/git/bin/:/usr/local/opt/gnu-tar/libexec/gnubin:$PATH:~/bin
 export NVM_DIR="$([ -z "${XDG_CONFIG_HOME-}" ] && printf %s "${HOME}/.nvm" || printf %s "${XDG_CONFIG_HOME}/nvm")"
 [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" # This loads nvm
