--- a/dot_fzf.zsh.tmpl
+++ b/dot_fzf.zsh.tmpl
@@ -16,3 +16,5 @@ source "/opt/homebrew/opt/fzf/shell/key-bindings.zsh"
 source /usr/share/doc/fzf/examples/completion.zsh
 source /usr/share/doc/fzf/examples/key-bindings.zsh
 {{ end }}
+
+alias fzf="fzf --preview 'bat --color=always {}' --preview-window '~3'"
