--- a/dot_fzf.zsh.tmpl
+++ b/dot_fzf.zsh.tmpl
@@ -17,4 +17,4 @@ source /usr/share/doc/fzf/examples/completion.zsh
 source /usr/share/doc/fzf/examples/key-bindings.zsh
 {{ end }}
 
-alias fzf="fzf --preview 'bat --color=always {}' --preview-window '~3'"
+alias fzf="fzf --preview 'bat --color=always --theme=ansi {}' --preview-window '~3'"
