--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -108,8 +108,6 @@ source $ZSH/oh-my-zsh.sh
 # alias ohmyzsh="mate ~/.oh-my-zsh"
 # export JAVA_8_HOME=$(/usr/libexec/java_home -v1.8)
 # export JAVA_9_HOME=$(/usr/libexec/java_home -v1.9)
-alias vim=nvim
-alias cat="bat --theme=ansi"
 export PATH=/usr/local/opt/vim/bin:/usr/local/opt/ruby/bin:/usr/local/opt/git/bin/:/usr/local/opt/gnu-tar/libexec/gnubin:$PATH:~/bin
 export NVM_DIR="$([ -z "${XDG_CONFIG_HOME-}" ] && printf %s "${HOME}/.nvm" || printf %s "${XDG_CONFIG_HOME}/nvm")"
 [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" # This loads nvm
@@ -126,7 +124,9 @@ alias ls='lsd'
 
 alias dockerclear='docker stop $(docker ps -aq) && docker rm $(docker ps -aq)'
 alias dockercleardangling='docker rmi $(docker images -q -f dangling=true)'
-
+alias vim=nvim
+alias cat="bat --theme=ansi"
+alias imgcat="wezterm imgcat"
 dockerinfo() {
     docker inspect $1 | jq '.[0].Config, .[0].Mounts'
 }
