--- a/dot_config/wezterm/wezterm.lua.tmpl
+++ b/dot_config/wezterm/wezterm.lua.tmpl
@@ -13,6 +13,13 @@ local function move_pane(key, direction)
     action = wezterm.action.ActivatePaneDirection(direction),
   }
 end
+``
+local function resize_pane(key, direction)
+  return {
+    key = key,
+    action = wezterm.action.AdjustPaneSize { direction, 3 }
+  }
+end
 
 -- This is where you actually apply your config choices
 config.set_environment_variables = {
@@ -65,7 +72,11 @@ config.keys = {
   },
   {
     key = '"',
+    {{ if eq .chezmoi.os "linux" }}
     mods = 'LEADER|SHIFT',
+    {{ else }}
+    mods = 'LEADER',
+    {{ end }}
     action = wezterm.action.SplitHorizontal { domain = 'CurrentPaneDomain' },
   },
   {
@@ -79,17 +90,31 @@ config.keys = {
   },
   {
     key = 't',
-    {{ if eq .chezmoi.os "linux" }}
-    mods = 'LEADER|SHIFT',
-    {{ else }}
     mods = 'LEADER',
-    {{ end }}
     action = wezterm.action.SpawnTab 'CurrentPaneDomain',
   },
+  { 
+    key = 'r',
+    mods = 'LEADER',
+    action = wezterm.action.ActivateKeyTable {
+      name = 'resize_panes',
+      one_shot = false,
+      timeout_milliseconds = 2000,
+    },
+  }
   move_pane('DownArrow', 'Down'),
   move_pane('UpArrow', 'Up'),
   move_pane('LeftArrow', 'Left'),
   move_pane('RightArrow', 'Right'),
+}
+
+config.key_tables = {
+    resize_panes = {
+        resize_pane('DownArrow', 'Down'),
+        resize_pane('UpArrow', 'Up'),
+        resize_pane('LeftArrow', 'Left'),
+        resize_pane('RightArrow', 'Right'),
+    },
 }
 
 local function showLeader (window)
