--- a/dot_config/wezterm/wezterm.lua.tmpl
+++ b/dot_config/wezterm/wezterm.lua.tmpl
@@ -112,7 +112,7 @@ config.key_tables = {
     resize_panes = {
         resize_pane('DownArrow', 'Down'),
         resize_pane('UpArrow', 'Up'),
-        resize_pane('LeftArrow', 'Left'),
+        resize_pane('h', 'Left'),
         resize_pane('RightArrow', 'Right'),
     },
 }
