--- a/dot_config/wezterm/wezterm.lua.tmpl
+++ b/dot_config/wezterm/wezterm.lua.tmpl
@@ -97,14 +97,14 @@ config.keys = {
   { 
     key = 'r',
     mods = 'LEADER',
-    action = wezterm.action_callback(function (win, pane) 
+    action = act.Multiple {
       act.ActivateKeyTable {
         name = 'resize_panes',
         one_shot = false,
         timeout_milliseconds = 2000,
       }
-      tabline.refresh(win, pane) 
-    end)
+      wezterm.action_callback(function (win, pane) tabline.refresh(win, pane) end)
+    }
   },
   move_pane('DownArrow', 'Down'),
   move_pane('UpArrow', 'Up'),
