--- a/dot_config/wezterm/wezterm.lua.tmpl
+++ b/dot_config/wezterm/wezterm.lua.tmpl
@@ -102,8 +102,8 @@ config.keys = {
         name = 'resize_panes',
         one_shot = false,
         timeout_milliseconds = 2000,
-      }
-      wezterm.action_callback(function (win, pane) tabline.refresh(win, pane) end)
+      },
+      wezterm.action_callback(function (win, pane) tabline.refresh(win, pane) end),
     }
   },
   move_pane('DownArrow', 'Down'),
