--- a/dot_config/wezterm/wezterm.lua.tmpl
+++ b/dot_config/wezterm/wezterm.lua.tmpl
@@ -127,7 +127,7 @@ local function showLeader (window)
     icons = icons .. '🚀'
   end
   if window:active_key_table() == "resize_panes" then
-    icons = icons .. '🤏'
+    icons = icons .. '📐'
   end
   if string.len(icons) > 1 then
     return ' ' .. icons .. ' '
