--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -42,7 +42,11 @@ alias ls='lsd'
 alias dockerclear='docker stop $(docker ps -aq) && docker rm $(docker ps -aq)'
 alias dockercleardangling='docker rmi $(docker images -q -f dangling=true)'
 alias vim=nvim
+{{ if .chezmoi.os "darwin" }}
 alias cat="bat --theme=ansi"
+{{ else }}
+alias cat="batcat --theme=ansi"
+{{ end }}
 alias imgcat="wezterm imgcat"
 
 ## Evals
