--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -22,7 +22,7 @@ plugins=(
 )
 
 source $ZSH/oh-my-zsh.sh
-
+. "$HOME/.cargo/env"
 # User configuration
 ## Exports
 export PATH=/usr/local/opt/vim/bin:/usr/local/opt/ruby/bin:/usr/local/opt/git/bin/:/usr/local/opt/gnu-tar/libexec/gnubin:$PATH:~/bin
