--- a/run_onchange_install-packages.sh.tmpl
+++ b/run_onchange_install-packages.sh.tmpl
@@ -2,27 +2,27 @@
 #!/bin/sh
 curl -fsSL https://apt.fury.io/wez/gpg.key | sudo gpg --yes --dearmor -o /etc/apt/keyrings/wezterm-fury.gpg
 echo 'deb [signed-by=/etc/apt/keyrings/wezterm-fury.gpg] https://apt.fury.io/wez/ * *' | sudo tee /etc/apt/sources.list.d/wezterm.list
-curl -sS https://downloads.1password.com/linux/keys/1password.asc | \
-  sudo gpg --dearmor --output /usr/share/keyrings/1password-archive-keyring.gpg && \
-  echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/1password-archive-keyring.gpg] https://downloads.1password.com/linux/debian/$(dpkg --print-architecture) stable main" | \
-  sudo tee /etc/apt/sources.list.d/1password.list && \
-  sudo mkdir -p /etc/debsig/policies/AC2D62742012EA22/ && \
-  curl -sS https://downloads.1password.com/linux/debian/debsig/1password.pol | \
-  sudo tee /etc/debsig/policies/AC2D62742012EA22/1password.pol && \
-  sudo mkdir -p /usr/share/debsig/keyrings/AC2D62742012EA22 && \
-  curl -sS https://downloads.1password.com/linux/keys/1password.asc | \
-  sudo gpg --dearmor --output /usr/share/debsig/keyrings/AC2D62742012EA22/debsig.gpg && \
+curl -sS https://downloads.1password.com/linux/keys/1password.asc |
+  sudo gpg --dearmor --output /usr/share/keyrings/1password-archive-keyring.gpg &&
+  echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/1password-archive-keyring.gpg] https://downloads.1password.com/linux/debian/$(dpkg --print-architecture) stable main" |
+  sudo tee /etc/apt/sources.list.d/1password.list &&
+  sudo mkdir -p /etc/debsig/policies/AC2D62742012EA22/ &&
+  curl -sS https://downloads.1password.com/linux/debian/debsig/1password.pol |
+  sudo tee /etc/debsig/policies/AC2D62742012EA22/1password.pol &&
+  sudo mkdir -p /usr/share/debsig/keyrings/AC2D62742012EA22 &&
+  curl -sS https://downloads.1password.com/linux/keys/1password.asc |
+  sudo gpg --dearmor --output /usr/share/debsig/keyrings/AC2D62742012EA22/debsig.gpg &&
   sudo apt update && sudo apt install 1password-cli
-eval $(op account add --address my.1password.com --email sdickinson@gmail.com --secret-key {{ .opsecret }}  --signin)
+eval $(op account add --address my.1password.com --email sdickinson@gmail.com --secret-key {{ .opsecret }} --signin)
 
-sudo apt install wezterm neovim lsd jq fzf git thefuck bat
+sudo apt install wezterm neovim lsd jq fzf git thefuck bat chafa
 {{ else if eq .chezmoi.os "darwin" -}}
 #!/bin/sh
-brew install -q 1password-cli lsd jq fzf git neovim thefuck bat
+brew install -q 1password-cli lsd jq fzf git neovim thefuck bat chafa
 brew install -q --cask wezterm
 {{ end -}}
-op read "op://Private/Sdickinson Server Private Key/private key" > ~/.ssh/id_ed25519_personal
-op read "op://Private/Sdickinson Server Private Key/public key" > ~/.ssh/id_ed25519_personal.pub
-op read "op://Private/Shine Github Key/private key" > ~/.ssh/id_ed25519_shine
-op read "op://Private/Shine Github Key/public key" > ~/.ssh/id_ed25519_shine.pub
-
+curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
+op read "op://Private/Sdickinson Server Private Key/private key" >~/.ssh/id_ed25519_personal
+op read "op://Private/Sdickinson Server Private Key/public key" >~/.ssh/id_ed25519_personal.pub
+op read "op://Private/Shine Github Key/private key" >~/.ssh/id_ed25519_shine
+op read "op://Private/Shine Github Key/public key" >~/.ssh/id_ed25519_shine.pub
