--- a/dot_fzf.zsh.tmpl
+++ b/dot_fzf.zsh.tmpl
@@ -17,4 +17,4 @@ source /usr/share/doc/fzf/examples/completion.zsh
 source /usr/share/doc/fzf/examples/key-bindings.zsh
 {{ end }}
 
-alias fzf="fzf --preview 'fzf-preview.sh' --preview-window '~3'"
+alias fzf="fzf --preview 'fzf-preview.sh {}'
