--- a/private_dot_ssh/config.tmpl
+++ b/private_dot_ssh/config.tmpl
@@ -1,5 +1,7 @@
+{{ if eq .chezmoi.os "darwin" }}
 Include ~/.orbstack/ssh/config
-
+{{ end }}
+{{ if ne .location "server" }}
 Host github.com
   AddKeysToAgent yes
 {{ if eq .location "work" }} 
@@ -21,4 +23,4 @@ Host sdickinson.com
 Host 172.236.35.111
   AddKeysToAgent yes
   IdentityFile ~/.ssh/id_ed25519
-
+{{ end }}
