--- a/run_onchange_install-packages.sh.tmpl
+++ b/run_onchange_install-packages.sh.tmpl
@@ -1,5 +1,5 @@
-{{ if eq .chezmoi.os "linux" -}}
 #!/bin/sh
+{{ if (and (eq .chezmoi.os "linux") (ne .location "server")) -}}
 curl -fsSL https://apt.fury.io/wez/gpg.key | sudo gpg --yes --dearmor -o /etc/apt/keyrings/wezterm-fury.gpg
 echo 'deb [signed-by=/etc/apt/keyrings/wezterm-fury.gpg] https://apt.fury.io/wez/ * *' | sudo tee /etc/apt/sources.list.d/wezterm.list
 curl -sS https://downloads.1password.com/linux/keys/1password.asc |
@@ -16,13 +16,16 @@ curl -sS https://downloads.1password.com/linux/keys/1password.asc |
 eval $(op account add --address my.1password.com --email sdickinson@gmail.com --secret-key {{ .opsecret }} --signin)
 
 sudo apt install wezterm neovim lsd jq fzf git thefuck bat chafa neofetch tldr
+{{ else if eq .location "server" -}}
+sudo apt install neovim lsd jq fzf git tldr
 {{ else if eq .chezmoi.os "darwin" -}}
-#!/bin/sh
 brew install -q 1password-cli lsd jq fzf git neovim thefuck bat chafa neofetch tldr
 brew install -q --cask wezterm
 {{ end -}}
+{{ if ne .location "server" -}}
 curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
 op read "op://Private/Sdickinson Server Private Key/private key" >~/.ssh/id_ed25519_personal
 op read "op://Private/Sdickinson Server Private Key/public key" >~/.ssh/id_ed25519_personal.pub
 op read "op://Private/Shine Github Key/private key" >~/.ssh/id_ed25519_shine
 op read "op://Private/Shine Github Key/public key" >~/.ssh/id_ed25519_shine.pub
+{{ end -}}
