Add closing of pane to wezterm

--- a/dot_config/wezterm/wezterm.lua.tmpl
+++ b/dot_config/wezterm/wezterm.lua.tmpl
@@ -96,6 +96,11 @@ config.keys = {
     mods = 'LEADER',
     action = act.SpawnTab 'CurrentPaneDomain',
   },
+  {
+    key = 'x',
+    mods = 'LEADER',
+    action = act.CloseCurrentPane { confirm = true },
+  }
   { 
     key = 'r',
     mods = 'LEADER',
