--- a/dot_config/wezterm/wezterm.lua.tmpl
+++ b/dot_config/wezterm/wezterm.lua.tmpl
@@ -24,7 +24,125 @@ local function resize_pane(key, direction)
   }
 end
 
--- This is where you actually apply your config choices
+local function get_process_name(tab)
+  local process_name = tab.active_pane.user_vars.PROG
+
+  if process_name == nil then
+    process_name = string.gsub(tab.active_pane.foreground_process_name, "(.*[/\\])(.*)", "%2")
+  end
+
+  if process_name == "wslhost.exe" then
+    local pane = tab.active_pane
+    process_name = pane.title
+  end
+
+  if process_name == "" then
+    process_name = "zsh"
+  end
+
+  return process_name
+end
+local function get_process(tab)
+  local process_icons = {
+        ["docker"] = {
+      { Foreground = { Color = colors.blue } },
+      { Text = wezterm.nerdfonts.linux_docker },
+    },
+        ["docker-compose"] = {
+      { Foreground = { Color = colors.blue } },
+      { Text = wezterm.nerdfonts.linux_docker },
+    },
+        ["nvim"] = {
+      { Foreground = { Color = colors.green } },
+      { Text = wezterm.nerdfonts.custom_vim },
+    },
+        ["v"] = {
+      { Foreground = { Color = colors.green } },
+      { Text = wezterm.nerdfonts.custom_vim },
+    },
+        ["vim"] = {
+      { Foreground = { Color = colors.green } },
+      { Text = wezterm.nerdfonts.dev_vim },
+    },
+        ["node"] = {
+      { Foreground = { Color = colors.green } },
+      { Text = wezterm.nerdfonts.mdi_hexagon },
+    },
+        ["zsh"] = {
+      { Foreground = { Color = colors.peach } },
+      { Text = wezterm.nerdfonts.dev_terminal },
+    },
+        ["bash"] = {
+      { Foreground = { Color = colors.subtext0 } },
+      { Text = wezterm.nerdfonts.cod_terminal_bash },
+    },
+        ["htop"] = {
+      { Foreground = { Color = colors.yellow } },
+      { Text = wezterm.nerdfonts.mdi_chart_donut_variant },
+    },
+        ["cargo"] = {
+      { Foreground = { Color = colors.peach } },
+      { Text = wezterm.nerdfonts.dev_rust },
+    },
+        ["go"] = {
+      { Foreground = { Color = colors.sapphire } },
+      { Text = wezterm.nerdfonts.mdi_language_go },
+    },
+        ["lazydocker"] = {
+      { Foreground = { Color = colors.blue } },
+      { Text = wezterm.nerdfonts.linux_docker },
+    },
+        ["git"] = {
+      { Foreground = { Color = colors.peach } },
+      { Text = wezterm.nerdfonts.dev_git },
+    },
+        ["lazygit"] = {
+      { Foreground = { Color = colors.peach } },
+      { Text = wezterm.nerdfonts.dev_git },
+    },
+        ["lua"] = {
+      { Foreground = { Color = colors.blue } },
+      { Text = wezterm.nerdfonts.seti_lua },
+    },
+        ["wget"] = {
+      { Foreground = { Color = colors.yellow } },
+      { Text = wezterm.nerdfonts.mdi_arrow_down_box },
+    },
+        ["curl"] = {
+      { Foreground = { Color = colors.yellow } },
+      { Text = wezterm.nerdfonts.mdi_flattr },
+    },
+        ["gh"] = {
+      { Foreground = { Color = colors.mauve } },
+      { Text = wezterm.nerdfonts.dev_github_badge },
+    },
+  }
+
+  local process_name = get_process_name(tab)
+  return wezterm.format(
+    process_icons[process_name]
+    or { { Foreground = { Color = colors.sky } }, { Text = string.format("%s", process_name) } }
+  )
+end
+local function get_current_working_dir(tab)
+  local current_dir = tab.active_pane.current_working_dir
+  local HOME_DIR = string.format("file://%s", os.getenv("HOME"))
+
+  return current_dir == HOME_DIR and "  ~"
+      or string.format(" %s", string.gsub(current_dir, "(.*[/\\])(.*)", "%2"))
+end
+
+wezterm.on("format-tab-title", function(tab)
+  return wezterm.format({
+    { Attribute = { Intensity = "Half" } },
+    { Text = tab.is_active and " [" or "  " },
+    { Text = get_process(tab) },
+    { Text = "  " },
+    { Text = get_current_working_dir(tab) },
+    { Text = tab.is_active and "] " or "  " },
+    { Foreground = { Color = colors.base } },
+  })
+end)-- This is where you actually apply your config choice
 config.set_environment_variables = {
   PATH = '/opt/homebrew/bin:' .. os.getenv('PATH')
 }
