--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -35,7 +35,7 @@ export LDFLAGS="$LDFLAGS -L/usr/local/opt/ruby/lib"
 export CPPFLAGS="$CPPFLAGS -I/usr/local/opt/ruby/include"
 export PKG_CONFIG_PATH="$PKG_CONFIG_PATH:/usr/local/opt/ruby/lib/pkgconfig"
 export TERM=xterm-256color
-export MANPAGER="sh -c 'col -bx | bat -l man -p'"
+export MANPAGER="sh -c 'col -bx | bat --theme=ansi -l man -p'"
 
 ## Aliases
 alias ls='lsd'
