--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -39,7 +39,11 @@ export PKG_CONFIG_PATH="$PKG_CONFIG_PATH:/usr/local/opt/ruby/lib/pkgconfig"
 export TERM=xterm-256color
 export BAT_THEME=ansi
 export MANPAGER="sh -c 'col -bx | bat -l man -p'"
-
+{{ if eq .chezmoi.os "linux" }}
+{{   if (.chezmoi.kernel.osrelease | lower | contains "microsoft") }}
+export BROWSER=wslview
+{{   end }}
+{{ end }}
 ## Aliases
 alias ls='lsd'
 alias dockerclear='docker stop $(docker ps -aq) && docker rm $(docker ps -aq)'
