--- a/dot_config/wezterm/wezterm.lua.tmpl
+++ b/dot_config/wezterm/wezterm.lua.tmpl
@@ -150,6 +150,7 @@ config.set_environment_variables = {
 }
 {{ if eq .chezmoi.os "darwin" }}
 config.color_scheme = 'Solarized Dark Higher Contrast'
+config.font = wezterm.font("FiraCode Nerd Font Mono", { weight = "Regular", stretch = "Normal", style = "Normal" })
 {{ end }}
 -- config.color_scheme = 'Atelier Dune (base16)'
 {{ if eq .chezmoi.os "linux" }}
