--- a/run_onchange_install-packages.sh.tmpl
+++ b/run_onchange_install-packages.sh.tmpl
@@ -22,7 +22,7 @@
 {{ else if eq .location "server" -}}
   sudo apt install lsd jq fzf git 
 {{ else if eq .chezmoi.os "darwin" -}}
-  brew install -q 1password-cli lsd jq fzf git neovim thefuck bat chafa fastfetch tldr ripgrep
+  brew install -q 1password-cli lsd jq fzf git neovim thefuck bat chafa fastfetch tldr ripgrep font-fira-code-nerd-font
   brew install -q --cask wezterm
   brew install -q --cask obsidian
   {{   if eq .location "work" -}}
