--- a/dot_config/wezterm/wezterm.lua.tmpl
+++ b/dot_config/wezterm/wezterm.lua.tmpl
@@ -149,7 +149,8 @@ config.set_environment_variables = {
   PATH = '/opt/homebrew/bin:' .. os.getenv('PATH')
 }
 {{ if eq .chezmoi.os "darwin" }}
-config.color_scheme = 'Solarized Dark Higher Contrast'
+-- config.color_scheme = 'Solarized Dark Higher Contrast'
+config.color_scheme = 'Spacedust'
 config.font = wezterm.font("FiraCode Nerd Font Mono", { weight = "Regular", stretch = "Normal", style = "Normal" })
 {{ end }}
 -- config.color_scheme = 'Atelier Dune (base16)'
