--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -10,7 +10,7 @@ fi
 # Path to your oh-my-zsh installation.
 export ZSH=~/.oh-my-zsh
 
-ZSH_THEME="powerlevel10k/powerlevel10k"
+# ZSH_THEME="powerlevel10k/powerlevel10k"
 plugins=(
   git
   docker
@@ -98,11 +98,11 @@ unset __conda_setup
 # <<< conda initialize <<<
 
 # To customize prompt, run `p10k configure` or edit ~/.p10k.zsh.
-[[ ! -f ~/.p10k.zsh ]] || source ~/.p10k.zsh
-export PNPM_HOME="/Users/sdickinson/Library/pnpm"
-case ":$PATH:" in
-  *":$PNPM_HOME:"*) ;;
-  *) export PATH="$PNPM_HOME:$PATH" ;;
-esac
-
-
+# [[ ! -f ~/.p10k.zsh ]] || source ~/.p10k.zsh
+# export PNPM_HOME="/Users/sdickinson/Library/pnpm"
+# case ":$PATH:" in
+#   *":$PNPM_HOME:"*) ;;
+#   *) export PATH="$PNPM_HOME:$PATH" ;;
+# esac
+#
+eval "$(starship init zsh)"
