--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -105,4 +105,5 @@ unset __conda_setup
 #   *) export PATH="$PNPM_HOME:$PATH" ;;
 # esac
 #
-eval "$(starship init zsh)"
+# eval "$(starship init zsh)"
+eval "$(oh-my-posh init zsh)"
