--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -106,4 +106,5 @@ unset __conda_setup
 # esac
 #
 # eval "$(starship init zsh)"
-eval "$(oh-my-posh init zsh)"
+# eval "$(oh-my-posh init zsh)"
+eval "$(oh-my-posh init zsh --config $(brew --prefix oh-my-posh)/themes/craver.omp.json)"
