--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -107,4 +107,4 @@ unset __conda_setup
 #
 # eval "$(starship init zsh)"
 # eval "$(oh-my-posh init zsh)"
-eval "$(oh-my-posh init zsh --config $(brew --prefix oh-my-posh)/themes/easy-term.omp.json)"
+eval "$(oh-my-posh init zsh --config $(brew --prefix oh-my-posh)/themes/lightgreen.omp.json)"
