--- a/dot_config/wezterm/wezterm.lua.tmpl
+++ b/dot_config/wezterm/wezterm.lua.tmpl
@@ -223,6 +223,16 @@ config.keys = {
     mods = 'LEADER',
     action = act.CloseCurrentPane { confirm = true },
   },
+  {
+    key = 'RightArrow',
+    mods = 'LEADER|SHIFT',
+    action = act.ActivateTabRelative(1),
+  },
+  {
+    key = 'LeftArrow',
+    mods = 'LEADER|SHIFT',
+    action = act.ActivateTabRelative(-1),
+  },
   { 
     key = 'r',
     mods = 'LEADER',
