--- a/dot_config/nvim/lua/plugins/codestats.lua.tmpl
+++ b/dot_config/nvim/lua/plugins/codestats.lua.tmpl
@@ -1,32 +1,40 @@
 return {
   {
-    "YannickFricke/codestats.nvim",
-    "nvim-lua/plenary.nvim",
+    'liljaylj/codestats.nvim',
+    dependencies = { 'nvim-lua/plenary.nvim' },
+    event = { 'TextChanged', 'InsertEnter' },
+    cmd = { 'CodeStatsXpSend', 'CodeStatsProfileUpdate' },
     config = function()
-      require("codestats-nvim").setup({
+      require("codestats").setup({
+          username = 'JazzXP',  -- needed to fetch profile data
+          base_url = 'https://codestats.net',  -- codestats.net base url
         {{ if eq .chezmoi.os "linux" -}}
           {{ if (.chezmoi.kernel.osrelease | lower | contains "microsoft") -}}
-            token = "{{ range (onepassword "dr3bexab4wvloeqcpwrsoubi7e").fields -}}
+            api_key = "{{ range (onepassword "dr3bexab4wvloeqcpwrsoubi7e").fields -}}
             {{   if eq .label "SERV"  -}}
             {{     .value -}}
             {{   end -}}
-            {{ end }}"
+            {{ end }}",
           {{ end -}}
         {{ else if eq .chezmoi.os "darwin" -}}
           {{ if eq .location "work" -}}
-            token = "{{ range (onepassword "dr3bexab4wvloeqcpwrsoubi7e").fields -}}
+            api_key = "{{ range (onepassword "dr3bexab4wvloeqcpwrsoubi7e").fields -}}
             {{   if eq .label "Shine"  -}}
             {{     .value -}}
             {{   end -}}
-            {{ end }}"
+            {{ end }}",
           {{ else -}}
-            token = "{{ range (onepassword "dr3bexab4wvloeqcpwrsoubi7e").fields -}}
+            api_key = "{{ range (onepassword "dr3bexab4wvloeqcpwrsoubi7e").fields -}}
             {{   if eq .label "Macbook Pro"  -}}
             {{     .value -}}
             {{   end -}}
-            {{ end }}"
+            {{ end }}",
           {{ end -}}
         {{ end -}}
+        send_on_exit = true,  -- send xp on nvim exit
+        send_on_timer = true,  -- send xp on timer
+        timer_interval = 60000,  -- timer interval in milliseconds (minimum 1000ms to prevent DDoSing codestat.net servers)
+        curl_timeout = 5,  -- curl request timeout in seconds
       })
     end,
   },
