Go back to the main codestats now my change is merged

--- a/dot_config/nvim/lua/plugins/codestats.lua.tmpl
+++ b/dot_config/nvim/lua/plugins/codestats.lua.tmpl
@@ -1,6 +1,6 @@
 return {
   {
-    'JazzXP/codestats.nvim',
+-   'liljaylj/codestats.nvim',
     dependencies = { 'nvim-lua/plenary.nvim' },
     event = { 'TextChanged', 'InsertEnter' },
     cmd = { 'CodeStatsXpSend', 'CodeStatsProfileUpdate' },
