Update .config/nvim/lazyvim.json Update .config/nvim/lua/plugins/lspconfig.lua Update .zshrc

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -79,8 +79,13 @@ listening() {
     fi
 }
 
+{{ if eq .chezmoi.os "linux" }}
+{{   if (.chezmoi.kernel.osrelease | lower | contains "microsoft") }}
+   source <(fzf --zsh)
+{{   else }}
 [ -f ~/.fzf.zsh ] && source ~/.fzf.zsh
-
+{{   end }}
+{{ end }}
 batdiff() {
     git diff --name-only --relative --diff-filter=d | xargs bat --diff
 }
