Update .config/ghostty/config Add .config/nvim/lua/plugins/markview.lua Update .config/wezterm/wezterm.lua Update .ssh/config

--- a/dot_config/wezterm/wezterm.lua.tmpl
+++ b/dot_config/wezterm/wezterm.lua.tmpl
@@ -150,7 +150,8 @@ config.set_environment_variables = {
 }
 {{ if eq .chezmoi.os "darwin" }}
 -- config.color_scheme = 'Solarized Dark Higher Contrast'
-config.color_scheme = 'Spacedust'
+-- config.color_scheme = 'Spacedust'
+config.color_scheme = 'Tokyo Night Moon'
 config.font = wezterm.font("FiraCode Nerd Font Mono", { weight = "Regular", stretch = "Normal", style = "Normal" })
 {{ end }}
 -- config.color_scheme = 'Atelier Dune (base16)'
