Add .config/karabiner/assets/complex_modifications/1739055294.json Add .config/karabiner/automatic_backups/karabiner_20250209.json Add .config/karabiner/karabiner.json Update .zshrc

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -88,6 +88,8 @@ listening() {
 {{   else }}
 [ -f ~/.fzf.zsh ] && source ~/.fzf.zsh
 {{   end }}
+{{ else }}
+  source <(fzf --zsh)
 {{ end }}
 batdiff() {
     git diff --name-only --relative --diff-filter=d | xargs bat --diff
